fix error message style on mobile.

--- a/source/css/_partial/newsletter.styl
+++ b/source/css/_partial/newsletter.styl
@@ -7,6 +7,7 @@
   .wrapper
     width: 100%
     align-items: left
+    margin-bottom: 50px
   h2
     font-size: 0.9rem
     margin: 0
